correction selection pas visible, ajout dessin avec selection, petites corrections, ATTENTION, les coordonees de la selection ne sont pas enore bonnes, meme si elles ont ete corrigees

--- a/src/content/styles/editor.css
+++ b/src/content/styles/editor.css
@@ -160,6 +160,7 @@ select, input {
 .corner {
     display: block;
     position: absolute;
+    z-index: 999;
 }
 
 .hidden {
